// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery handles a click event on the first image in the static gallery 1`] = `
<div>
  <div>
    <Gallery__GreyBackground />
    <div />
    <Gallery__FixedDiv>
      <ButtonPreviousImage
        onClick={[Function]}
      >
        &lt;
      </ButtonPreviousImage>
      <ImgBig
        src="mockUrl"
      />
      <ButtonFlag
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M485,475H469v12h-2V463h18l-3,6Zm-16-10v8h13l-2-4,2-4H469Z"
            data-name="24. Tiny Flag Icon"
            fill="#fff"
            id="_24._Tiny_Flag_Icon"
            transform="translate(-464 -463)"
          />
        </svg>
      </ButtonFlag>
      <ButtonNextImage
        onClick={[Function]}
      >
        &gt;
      </ButtonNextImage>
    </Gallery__FixedDiv>
    <XButtonPopup
      onClick={[Function]}
    >
      X
    </XButtonPopup>
  </div>
  <Gallery__Row>
    <Gallery__Column>
      <ImgDouble
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgDouble
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgSingle
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgLast
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
  </Gallery__Row>
</div>
`;

exports[`Gallery renders 9 image elements when passed an images array of length 9 or more 1`] = `
<div>
  <div />
  <Gallery__Row>
    <Gallery__Column>
      <ImgDouble
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgDouble
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgSingle
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgLast
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
  </Gallery__Row>
</div>
`;

exports[`Gallery renders 9 image elements when passed an images array of length 9 or more 2`] = `
<div>
  <div />
  <Gallery__Row>
    <Gallery__Column>
      <ImgDouble
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgDouble
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgSingle
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
    <Gallery__Column>
      <ImgTriple
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgTriple
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <ImgLast
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </Gallery__Column>
  </Gallery__Row>
</div>
`;

exports[`Gallery renders nothing when passed an empty images array 1`] = `""`;
